Fix wrapping

--- a/assets/css/arrivals.css
+++ b/assets/css/arrivals.css
@@ -20,6 +20,10 @@ body {
     margin: 20px 0 10px;
 }
 
+.row > .col-xs-1, .row > .col-xs-2, .row > .col-xs-3 {
+    white-space: nowrap;
+}
+
 .panel > .arrive-color1 {
     background-color: rgba(163,225,244,0.1);
 }
